--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["src/*"]
+  },
   "exclude": ["node_modules", "**/__tests__/*"]
 }
