--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "dev": "vite"
+    "dev": "vite",
+    "start:ssr": "npm run build:ssr && tsx example/ssr.ts",
+    "build:": "vite build",
+    "build:ssr": "vite build --config vite.ssr.config.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vite": "^6.0.7"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "jsdom"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
